replace MaxPermSize to MaxMetaspaceSize